Adicionado fluxo de preenchimento e abertura dos cursos.
Também foi adicionado métodos separadas, assim melhorando o entendimento do código.

--- a/DesafioAlura.RPA/appsettings.json
+++ b/DesafioAlura.RPA/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
   "Configuracoes": {
     "StringConexaoBanco": "SuaStringDeConexao",
-    "UrlBusca": "https://www.alura.com.br/"
+    "UrlBusca": "https://www.alura.com.br/",
+    "PalavraChave": "rpa"
   }
 }
