--- a/DesafioAlura.RPA/DesafioAlura.RPA.csproj
+++ b/DesafioAlura.RPA/DesafioAlura.RPA.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.1" />
+    <PackageReference Include="Selenium.Support" Version="4.26.1" />
     <PackageReference Include="Selenium.WebDriver" Version="4.26.1" />
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="130.0.6723.9100" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
