Adicionado método de Filtrar por "Curso" configurável no appsettings

--- a/DesafioAlura.RPA/appsettings.json
+++ b/DesafioAlura.RPA/appsettings.json
@@ -2,6 +2,7 @@
   "Configuracoes": {
     "StringConexaoBanco": "SuaStringDeConexao",
     "UrlBusca": "https://www.alura.com.br/",
-    "PalavraChave": "rpa"
+    "PalavraChave": "rpa",
+    "TipoDeCurso": "Cursos"
   }
 }
