Adicionado método de captura de informação dentro da pagina.

--- a/DesafioAlura.RPA/appsettings.json
+++ b/DesafioAlura.RPA/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "Configuracoes": {
-    "StringConexaoBanco": "SuaStringDeConexao",
+    "StringConexaoBanco": "String de Conexao com banco de dados",
     "UrlBusca": "https://www.alura.com.br/",
     "PalavraChave": "rpa",
     "TipoDeCurso": "Cursos"
